test/files/neg/t4137.check
t4137.scala:9: error: overriding type EPC[X1] = C[X1] (defined in trait A);
 override type EPC = C[T] has incompatible type
  override type EPC = C[T]
                ^
t4137.scala:10: error: overriding type EPC2[X1] = C[X1] (defined in trait A);
 override type EPC2[X1 <: String] = C[X1] has incompatible type
  override type EPC2[X1 <: String] = C[X1]
                ^
two errors found
